# pi-enterprise-sandbox

./: .dockerignore  .env.example  .gitignore  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENT_PLAN.md  PLAN.md  README.md  REFACTORING_PLAN.md  docker-compose.prod.yml  docker-compose.yml  plan.md  pyproject.toml  runtime-versions.json
.trellis/: .template-hashes.json  workflow.md
agent/: Dockerfile  chat-runner.js  config.js  mcp-tools.js  message-helpers.js  package-lock.json  package.json  run-manager.js  sandbox-tools.js  sandbox_client.py  server.js  tool-registry.js  tool_adapter.py  tool_policy.py  worker.js  workspace-paths.js
api-server/: Dockerfile  config.js  package-lock.json  package.json  sandbox-tools.js  server.js
docs/: 2026-07-20-code-review.md  PROCESS_LOG.md  README.md  STATUS.md  api.md  architecture.md  deployment.md  development.md  field-issues-and-evolution-requirements.md  module-layout.md  next-iteration-2026-07-11.md  pr05-session-recovery.md  pr06-mcp-adapter-deferred.md  pr13-deletion-evidence.md  refactor-follow-up.md  release-gate-evidence-2026-07-19.md  review-deferred-items.md  webui.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts  vite.trace-gate.config.ts
nginx/: Dockerfile  entrypoint.sh  nginx.conf
pi_enterprise_sandbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sandbox/: Dockerfile  __init__.py  auth.py  config.py  database.py  development_reset.py  entrypoint.sh  main.py  models.py  paths.py  repositories.py  requirements.txt  seccomp-bubblewrap.json  seccomp-bubblewrap.md  telemetry.py  trace.py
scripts/: backup.sh  reset-development.py  restore.sh  smoke-cross-service.mjs  verify_compose_prod_config.py
sdk/: README.md  client.js  index.js  package.json  types.js
skills/: README.md
tests/: conftest.py  container_bwrap_smoke.py  e2e_artifact_flow.py  mcp_full_e2e.py  test_a2a_edge_proxy.py  test_agent_events.py  test_agent_module.py  test_approval.py  (+94 more)
(+1129 files in other folders)
