[project]
name = "pi-enterprise-sandbox"
version = "0.1.0"
description = "Enterprise Sandbox Runtime for Pi Agent — secure execution and governance"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "aiofiles>=24.0",
    "prometheus-client>=0.20.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sandbox*", "agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
