[project]
name = "pi-enterprise-sandbox"
version = "0.1.0"
description = "Enterprise Sandbox Runtime for Pi Agent — secure execution and governance"
license = {text = "MIT"}
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20.0",
    "PyMySQL>=1.1.0",
    "redis>=5.0",
    "opentelemetry-api==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-exporter-otlp-proto-http==1.39.1",
    "opentelemetry-instrumentation-fastapi==0.60b1",
    "opentelemetry-instrumentation-httpx==0.60b1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sandbox*", "agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
